--- a/week02/temples/holygrail.html
+++ b/week02/temples/holygrail.html
@@ -11,8 +11,8 @@
     <h1>A Holy Grail Layout Example</h1>
     <nav>
         <uI>
-            <Ii>https://byui.instructure.com/?login_success=1</Ii>
-            <a>https://www.linkedin.com/in/emmanuel-chinedu-kelikume/</a>
+            <Ii><a href="https://byui.instructure.com/?login_success">BYU-Idaho</a></Ii>
+            <Ii><a href="https://www.linkedin.com/in/emmanuel-chinedu-kelikume">My Linkedin Profile</a></uI>
         </ul>
     </nav>
 </body>
@@ -21,9 +21,9 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, enim.</p>    
 </manin>
 <aside>
-    <img> src="https://www.churchofjesuschrist.org/temples/photo-gallery/san-diego-california-temple?lang=eng.jpeg" alt="San Diego California Temple" width="200"
+    <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/san-diego-california/1280x800/san-diego-temple-765109-wallpaper.jpg" alt="San Diego California Temple" width="200">
 </aside>
 <footer>
     🌴 Emmanuel Kelikume
 </footer>
-</html>
+</body>
