--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en-US">
     <head>
       <meta charset="utf-8">
-      <mata name="viewport" content="width=device-width,initial-scale=1.0">
-      <title>Emmanuel Kelikume | WWD 130</title>
+      <mata name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Emmanuel Kelikume | WWD130</title>
+      <meta name="description" content="Emmanuel Keikume, Web Fundamentals, the purpose of this page is to be acquainted with web development and show my progress">
+      <meta name="author" content="Emmanuel Kelikume">
       <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
@@ -15,11 +17,18 @@
           </nav>
         </header>
         <main>
-          <h1>Emmanuel Kelikume | WWD 130</h1>
+          <h1>Emmanuel Kelikume | WWD130</h1>
           <img src="images/profile.jpg" alt="Hello, my name is Emmanuel Kelikume" width="200">
           <p>Hello! My name is Emmanuel Kelikume and I am from Ogun State, Nigeria. I enjoy playing football ... </p>
+        ...
         </main>
+        <aside>
+          <h2>Ogun</h2>
+          <img src="images/ogun.jpg" alt="Ogun landscape">
+          <p>Ogun State, in southwestern Nigeria, shares borders with Lagos, Oyo, Osun, Ondo, and the Republic of Benin. Covering about 16,762 square kilometers, it is home to over 5 million people, with significant urban centers like Abeokuta, Sagamu, and Ijebu Ode. As a major industrial hub, Ogun hosts many manufacturing companies, particularly in Agbara and Ota, and is known for its agricultural production, including kola nuts, cocoa, and palm oil. Its cultural heritage is rich, with historical sites like Olumo Rock and its vibrant festivals drawing visitors.</p>
+        </aside>
         <footer>
+          ...
           <p>©2024 🌴 Emmanuel Kelikume 🌴 Ogun State, Nigeria</p>
         </footer>
       </body>
