--- a/wwr/about.html
+++ b/wwr/about.html
@@ -74,7 +74,7 @@
         </section>
         </main>
     <footer>
-        <p>©2024 Raft Stars | Emmanuel Kelikume</p>
+        <p>©2024 Rafthub | Emmanuel Kelikume</p>
         <nav class="social-links">
             <a href="https://gmail.com"><img src="images/gmail.webp" alt="Gmail"></a>
             <a href="https://facebook.com"><img src="images/facebook.webp" alt="Facebook"></a>
