--- a/wwr/contacts.html
+++ b/wwr/contacts.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Contact Us |Raft Stars</title>
-    <meta name="description" content="Contact Raft Stars for Inquires">
+    <title> Contact Us |Rafthub</title>
+    <meta name="description" content="Contact Rafthub for Inquires">
     <link rel="stylesheet" href="styles/rafting.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,7 +27,7 @@
         <h1>Contact Information</h1>
         <p>Address: 21, Igbore Road, Obada, Abeokuta</p>
         <p>Phone: (+234)8031114594</p>
-        <a href="mailto:emmanuelkelly29@gmail.com">info@raftstars.com</a>
+        <a href="mailto:emmanuelkelly29@gmail.com">info@rafthub.com</a>
         <div class="map">
           <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3959.5340358331346!2d3.2963747539880295!3d7.063904471696333!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zN8KwMDMnNTAuMCJOIDPCsDE3JzU0LjciRQ!5e0!3m2!1sen!2sng!4v1730039448121!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
           </iframe>
@@ -87,7 +87,7 @@
      
     
     <footer>
-        <p>©2024 Raft Stars | Emmanuel Kelikume</p>
+        <p>©2024 Rafthub | Emmanuel Kelikume</p>
         <nav class="social-links">
             <a href="https://gmail.com"><img src="images/gmail.webp" alt="Gmail"></a>
             <a href="https://facebook.com"><img src="images/facebook.webp" alt="Facebook"></a>
