--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -13,7 +13,7 @@
     </head>
 <body>
     <header>
-        <img src="images/wwrlogo.png" alt="wwrlogo">
+        <img src="images/wwrlogo.jpg" alt="wwrlogo">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
